# dev-stack

./: .cursorrules  .gitignore  AGENTS.md  GEMINI.md  PROJECT_CONTEXT.md  README.md  UPDATER_SETUP.md  cloudflare-custom-domain.md  cloudflare-project-tunnel-name.md  devstack-plan.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude/skills/desktop-design/: SKILL.md
.claude/skills/react-frontend/: SKILL.md
.claude/skills/verification-before-completion/: SKILL.md
.github/workflows/: pages.yml  release.yml
scripts/: bump-version.ps1  release-version.ps1  set-updater-env.ps1
src/: App.jsx  i18n.js  index.css  main.jsx  store.js  store_backup.js  store_old.js
src-tauri/: Cargo.toml  devstack.rc  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloudflare_tunnel.rs  lib.rs
src/components/: CloudflareTunnelMode.jsx  Modal.jsx  PageApache.jsx  PageDatabase.jsx  PageLogs.jsx  PageMailServer.jsx  PageNode.jsx  PagePHP.jsx  PageQuickConfig.jsx  PageServices.jsx  PageSettings.jsx  PageSites.jsx  PageTunnels.jsx  Sidebar.jsx  Toast.jsx
src/hooks/: useServicePoll.js  useSystemStats.js
src/lib/: mail.js  paths.js  project.js  ps.js  ssl.js
src/pages/: LandingPage.jsx
src/store/: apacheSlice.js  configSlice.js  index.js  mysqlSlice.js  nodeSlice.js  phpSlice.js  redisSlice.js  serviceSlice.js  tunnelSlice.js  uiSlice.js
